examples/semantics/errors/error23.grace
fun error23 () : nothing
{
	puti(999);
}
